# deque

./: .editorconfig  .eslintrc.yaml  .gitignore  .prettierignore  .prettierrc  .prettierrc.yaml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  cspell.yaml  lint-staged.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cspell/: project-words.txt
.husky/: pre-commit
.trunk/: trunk.yaml
app/: index.html  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
app/patches/: rollup-plugin-transform-tagged-template+0.0.3.patch
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/prisma/: schema.prisma
app/src-tauri/src/: main.rs
app/src-tauri/src/app/: menu.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/routes/: collections.rs  items.rs  mod.rs
app/src/components/collections/: Collection.tsx  CreateCollection.tsx
app/src/components/items/: CreateItem.tsx  Item.tsx
app/src/hooks/rspc/: bindings.ts  index.ts
app/src/lib/: tailwind-backticks.ts
app/src/styles/: main.css
docs/: wireframe.excalidraw
